--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="header">Header Logo</div>
+        <div class="navbar-header">Header Logo</div>
         <ul>
             <li><a href="#">header link one</a></li>
             <li><a href="#">header link two</a></li>
