--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
     <figure>
         <div class="figure">
-            <div class="figure-header">
+            <h2>Some random information</h2>
+            <div class="card-container">
                 <div class="card">
                     <img src="" alt="">
                     <p>this is some subtext under an illustration or image</p>
